--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine-node spec",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "data-store": "^4.0.3",
-    "luhn": "^2.4.0"
+    "luhn": "^2.4.0",
+    "jasmine-node": "^3.0.0"
   }
 }
