--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "client",
+  "name": "cc-processing-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.18",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "typescript": "^3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
