--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"cd backend && npm start\" \"cd client && npm start\"",
+    "install-all": "concurrently \"cd backend && npm i\" \"cd client && npm i\""
   },
   "repository": {
     "type": "git",
